update: 统计浏览量

--- a/public/view.html
+++ b/public/view.html
@@ -14,7 +14,18 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1274994316'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1274994316' type='text/javascript'%3E%3C/script%3E"));</script>
+    <script>
+    var cnzz_s_tag = document.createElement('script');
+    cnzz_s_tag.type = 'text/javascript';
+    cnzz_s_tag.async = true;
+    cnzz_s_tag.charset = "utf-8";
+    cnzz_s_tag.src = "http://w.cnzz.com/c.php?id=1274994316&async=1";
+    var root_s = document.getElementsByTagName('script')[0];
+    root_s.parentNode.insertBefore(cnzz_s_tag, root_s);
+    //声明_czc对象:
+    var _czc = _czc || [];
+    _czc.push(["_setAccount", "1274994316"]);
+    </script>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 </body>
 </html>
